# Ochre

./: BUILD.md  CMakeLists.txt  ISSUES  RECORD  blur.cpp  blur.h  button.cpp  button.h  context.cpp  context.h  debugmap.h  effect.cpp  effect.h  except.h  exception.h  font.cpp  font.h  game.h  gameregion.cpp  gameregion.h  gamescreen.cpp  gamescreen.h  gfx.h  globals.cpp  globals.h  grid.cpp  grid.h  gridobj.h  house.cpp  house.h  leveller.cpp  leveller.h  logger.h  main.cpp  maptex.cpp  maptex.h  material.h  maths.cpp  maths.h  meshes.cpp  (+31 more)
assets/: house1.blend  house2.blend  house3.blend  house4.blend  toppivotcube.blend
media/: flattex.shr  flatuntex.shr  lightcalc.inc  untex.shr
media/meshes/house1/: house1.mtl  house1.mtl~
media/meshes/house2/: house2.mtl
media/meshes/house3/: house3.mtl
media/meshes/house4/: house4.mtl
media/meshes/marker/: marker.mtl
media/meshes/plane/: plane.mtl
media/meshes/toppivotcube/: toppivotcube.mtl
